# enblastertools

./: pyproject.toml  requirements.txt
archive/: genes_list.txt  query_sequences.fasta
archive/batch1/BLAST-cadenza/: TraesCS2A02G074900  TraesCS2A02G414600  TraesCS2B02G433800  TraesCS2D02G411900  TraesCS3A02G074100  TraesCS3A02G074200  TraesCS3A02G274300  TraesCS3B02G088400  TraesCS3B02G308000  TraesCS3D02G273500  TraesCS4A02G046700  TraesCS4A02G182800  TraesCS4A02G412100  TraesCS4B02G135800  TraesCS4B02G258200  TraesCS4B02G312300  TraesCS4D02G130600  TraesCS4D02G258000  TraesCS4D02G309900  TraesCS5A02G155000  TraesCS5B02G153200  TraesCS5D02G159900  TraesCS7A02G110500  TraesCS7A02G418900  TraesCS7B02G008400  TraesCS7B02G319100  TraesCS7D02G106000  TraesCS7D02G411500  TraesCSU02G085100
archive/batch1/BLAST-claire/: TraesCS2A02G074900  TraesCS2A02G414600  TraesCS2B02G433800  TraesCS2D02G411900  TraesCS3A02G074100  TraesCS3A02G074200  TraesCS3A02G274300  TraesCS3B02G088400  TraesCS3B02G308000  TraesCS3D02G273500  TraesCS4A02G046700  TraesCS4A02G182800  TraesCS4A02G412100  TraesCS4B02G135800  TraesCS4B02G258200  TraesCS4B02G312300  TraesCS4D02G130600  TraesCS4D02G258000  (+11 more)
archive/data/: .results.txt.swp  results.txt
archive/testdata/: summary
docs/: README.md  TODO.md
graphics/: plot_alignment.py  plot_blast.py
src/configs/: config.yaml  plugin.py
src/enblastertool/: call_msa.py  conf.py  config.yml  filter.py  filter_methods.py  goi.py  locator.py  make_fasta.py  make_queries.py  parse_config.py  predict_orf.py  retrieve_blast.py  summariser.py
(+210 files in other folders)
